# Selenium-Testing-Python

./: pyproject.toml
tests/: test_firefox.py  test_google.py
